# qjackctl

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.cvs  Makefile.in  README  README.cmake  README.md  TODO  TRANSLATORS  acconfig.h  build_mingw.sh  build_mingw32.sh  clienti.xpm  cliento.xpm  config.h.in  configure.ac  configure.in  main.cpp  portlni.xpm  portlno.xpm  portlti.xpm  portlto.xpm  portpni.xpm  portpti.xpm  portpto.xpm  qjackctl.1  qjackctl.desktop.in  qjackctl.fr.1  qjackctl.pro  qjackctl.pro.in  qjackctl.spec.in  qjackctl.xpm  qjackctlMainForm.ui  qjackctlMainForm.ui.h  qjackctlPatchbay.cpp  qjackctlPatchbay.h  upload.sh
.github/workflows/: main.yml
cmake/: FindJack.cmake  FindPortAudio.cmake
debian/: changelog  control  copyright  rules
icons/: aclienti.xpm  acliento.xpm  aplugi.xpm  aplugo.xpm  aporti.xpm  aportlni.xpm  aportlno.xpm  aportlti.xpm  aportlto.xpm  aporto.xpm  aportpni.xpm  aportpno.xpm  aportpti.xpm  aportpto.xpm  asocketi.xpm  asocketo.xpm  clienti.xpm  cliento.xpm  mclienti.xpm  mcliento.xpm  mplugi.xpm  mplugo.xpm  mporti.xpm  mporto.xpm  msocketi.xpm  msocketo.xpm  pluglni.xpm  pluglno.xpm  portlni.xpm  portlti.xpm  portpno.xpm  qjackctl.qrc  qjackctl.xpm  socketi.xpm  socketo.xpm  xsocket1.xpm
mingw/: build_portaudio.sh  linker.sh  linker32.sh  linker64.sh  mingw_config.h  required_packages.txt
mingw/32/: README
mingw/32/portaudio/: aclocal.m4  libtool  portaudio-2.0.pc  portaudio_cmake.def
mingw/32/portaudio/bindings/cpp/: aclocal.m4
mingw/32/portaudio/bindings/cpp/lib/: Makefile.in
mingw/32/portaudio/lib/: libportaudio.la
mingw/32/portaudio/lib/.libs/: libportaudio.lai
mingw/32/portaudio/src/common/: pa_allocation.lo  pa_debugprint.lo  pa_front.lo  pa_process.lo  pa_ringbuffer.lo  pa_stream.lo
mingw/32/portaudio/src/hostapi/asio/: iasiothiscallresolver.lo  pa_asio.lo
mingw/32/portaudio/src/hostapi/skeleton/: pa_hostapi_skeleton.lo
mingw/32/portaudio/src/os/win/: pa_win_coinitialize.lo  pa_win_util.lo  pa_win_waveformat.lo
mingw/64/portaudio/: configure  libtool  options_cmake.h  portaudio-2.0.pc
mingw/64/portaudio/bindings/cpp/: Makefile.in
mingw/64/portaudio/bindings/cpp/doc/: Makefile.in
mingw/64/portaudio/bindings/cpp/include/: Makefile.in
mingw/64/portaudio/lib/: libportaudio.la
mingw/64/portaudio/lib/.libs/: libportaudio.lai
mingw/64/portaudio/src/common/: pa_converters.lo  pa_cpuload.lo  pa_dither.lo  pa_trace.lo
mingw/64/portaudio/src/hostapi/dsound/: pa_win_ds.lo  pa_win_ds_dynlink.lo
mingw/64/portaudio/src/hostapi/wmme/: pa_win_wmme.lo
mingw/64/portaudio/src/os/win/: pa_win_hostapis.lo  pa_win_wdmks_utils.lo
mingw/icon/: resfile.rc
mingw/include/jack/: jack.h  jack.h~  systemdeps.h  types.h  weakmacros.h
mingw/portaudio/: CMakeCache.txt  libtool  w
mingw/portaudio/src/hostapi/wdmks/: pa_win_wdmks.lo
mingw/weakjack/: weak_libjack.def  weak_libjack.h
mingw32/: diff.diff  how_to_build_portaudio.txt  linker.sh
mingw32/include/jack/: thread.h
mingw32/portaudio/: cmake_install.cmake
mingw32/portaudio/lib/: libportaudio.la~
mingw32/portaudio/lib/.libs/: libportaudio.lai
mingw32/portaudio/portaudio_old/vc/: portaudio.vcproj
mingw32/portaudio/src/hostapi/dsound/: pa_win_ds.lo
mingw32/portaudio/vc/: portaudio.lib
rpm/: qjackctl.spec
src/: CMakeLists.txt  cmake_config.h  cmake_config.h.in  config.h.cmake  main.cpp  qjackctl.cpp  qjackctl.desktop  qjackctl.desktop.in  qjackctl.h  qjackctl.qrc  qjackctlAbout.h  qjackctlAboutForm.cpp  qjackctlAboutForm.h  qjackctlAboutForm.ui  qjackctlAboutForm.ui.h  qjackctlAliases.cpp  qjackctlAliases.h  qjackctlAlsaConnect.cpp  qjackctlAlsaConnect.h  qjackctlAlsaGraph.cpp  qjackctlAlsaGraph.h  qjackctlConnect.cpp  qjackctlConnect.h  qjackctlConnectAlias.cpp  qjackctlConnectAlias.h  qjackctlConnections.cpp  qjackctlConnections.h  qjackctlConnectionsForm.cpp  qjackctlConnectionsForm.h  qjackctlConnectionsForm.ui  qjackctlConnectionsForm.ui.h  qjackctlGraph.cpp  qjackctlGraph.h  qjackctlGraphCommand.cpp  qjackctlGraphCommand.h  qjackctlGraphForm.cpp  qjackctlGraphForm.h  qjackctlGraphForm.ui  qjackctlInterfaceComboBox.cpp  qjackctlInterfaceComboBox.h  (+57 more)
src/appdata/: Info.plist  org.rncbc.qjackctl.desktop  org.rncbc.qjackctl.metainfo.xml  qjackctl.appdata.xml
src/images/: QjackCtl.icns  qjackctl.blend  render.sh
src/man1/: qjackctl.1  qjackctl.fr.1
src/translations/: qjackctl_cs.ts  qjackctl_de.ts  qjackctl_es.ts  qjackctl_fr.ts  qjackctl_it.ts  qjackctl_ja.ts  qjackctl_ko.ts  qjackctl_nl.ts  qjackctl_pt-br.ts  qjackctl_pt.ts  qjackctl_pt_BR.ts  qjackctl_ru.ts  qjackctl_sk.ts  qjackctl_tr.ts  qjackctl_uk.ts
translations/: qjackctl_cs.ts  qjackctl_de.ts  qjackctl_es.ts  qjackctl_fr.ts  qjackctl_it.ts  qjackctl_ru.ts
win32/: config.h  qjackctl.pro
